--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
 
 <body>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YF8P725KRV"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WFDTR1LSKZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-YF8P725KRV');
+    gtag('config', 'G-WFDTR1LSKZ');
   </script>
-  <div id="root"></div>
 
   <script type="module" src="/src/main.jsx"></script>
 </body>
