--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     gtag('config', 'G-WFDTR1LSKZ');
   </script>
+  <div id="root"></div>
 
   <script type="module" src="/src/main.jsx"></script>
 </body>
