--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
-  <title>Narae Jang</title>
+  <title>Crafting User-Centric Solutions | Narae Jang</title>
 </head>
 
 <body>
