--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     rel="stylesheet">
   <title>Narae Jang | From defining brand identities to refining user interfaces.</title>
   <meta property="og:title" content="Narae Jang | From defining brand identities to refining user interfaces." />
-  <meta property="og:image"
-    content="https://drive.google.com/file/d/1d0H9d5RQPiIWBjGhcCxtRFTBALxm-Oss/view?usp=sharing" />
+  <meta property="og:image" content="https://naraejang.dev/assets/website_thumb.webp" />
   <meta property="og:image:width" content="1000" />
   <meta property="og:image:height" content="1000" />
   <meta property="og:image:alt" content="From defining brand identities to refining user interfaces." />
