--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   <meta property="og:site_name" content="Narae Jang | From defining brand identities to refining user interfaces." />
   <meta property="og:url" content="https://naraejang.dev" />
   <meta property="og:type" content="website" />
+  <meta property="description"
+    content="Hi! This is Narae, a designer and developer. From defining brand identities to refining user interfaces. My expertise encompasses branding, logo design, publication design, digital marketing, UI/UX, and development, forging new paths into the digital landscape." />
+  <meta property="image" content="https://naraejang.dev/assets/website_thumb.webp" />
+  <meta property="image:width" content="1000" />
+  <meta property="image:height" content="1000" />
 </head>
 
 <body>
