proper url for og:image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
   <title>Narae Jang | From defining brand identities to refining user interfaces.</title>
   <meta property="og:title" content="Narae Jang | From defining brand identities to refining user interfaces." />
-  <meta property="og:image" content="https://naraejang.dev/assets/website_thumb.webp" />
+  <meta property="og:image" content="https://naraejang.dev/website_thumb.webp" />
   <meta property="og:image:width" content="1000" />
   <meta property="og:image:height" content="1000" />
   <meta property="og:image:alt" content="From defining brand identities to refining user interfaces." />
@@ -24,7 +24,7 @@
   <meta property="og:type" content="website" />
   <meta property="description"
     content="Hi! This is Narae, a designer and developer. From defining brand identities to refining user interfaces. My expertise encompasses branding, logo design, publication design, digital marketing, UI/UX, and development, forging new paths into the digital landscape." />
-  <meta property="image" content="https://naraejang.dev/assets/website_thumb.webp" />
+  <meta property="image" content="https://naraejang.dev/website_thumb.webp" />
   <meta property="image:width" content="1000" />
   <meta property="image:height" content="1000" />
 </head>
