--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta property="og:site_name" content="Narae Jang | From defining brand identities to refining user interfaces." />
   <meta property="og:url" content="https://naraejang.dev" />
   <meta property="og:type" content="website" />
-  <meta property="description"
+  <meta name="description"
     content="Hi! This is Narae, a designer and developer. From defining brand identities to refining user interfaces. My expertise encompasses branding, logo design, publication design, digital marketing, UI/UX, and development, forging new paths into the digital landscape." />
   <meta property="image" content="https://naraejang.dev/website_thumb.webp" />
   <meta property="image:width" content="1000" />
