--- a/index.html
+++ b/index.html
@@ -12,21 +12,30 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
   <title>Narae Jang | From defining brand identities to refining user interfaces.</title>
-  <meta property="og:title" content="Narae Jang | From defining brand identities to refining user interfaces." />
-  <meta property="og:image" content="https://naraejang.dev/website_thumb.webp" />
-  <meta property="og:image:width" content="1000" />
-  <meta property="og:image:height" content="1000" />
-  <meta property="og:image:alt" content="From defining brand identities to refining user interfaces." />
-  <meta property="og:description"
-    content="Hi! This is Narae, a designer and developer. From defining brand identities to refining user interfaces. My expertise encompasses branding, logo design, publication design, digital marketing, UI/UX, and development, forging new paths into the digital landscape." />
-  <meta property="og:site_name" content="Narae Jang | From defining brand identities to refining user interfaces." />
-  <meta property="og:url" content="https://naraejang.dev" />
-  <meta property="og:type" content="website" />
+
+  <meta name="title" content="Narae Jang | From defining brand identities to refining user interfaces.">
   <meta name="description"
-    content="Hi! This is Narae, a designer and developer. From defining brand identities to refining user interfaces. My expertise encompasses branding, logo design, publication design, digital marketing, UI/UX, and development, forging new paths into the digital landscape." />
-  <meta property="image" content="https://naraejang.dev/website_thumb.webp" />
-  <meta property="image:width" content="1000" />
-  <meta property="image:height" content="1000" />
+    content="Hi! This is Narae, a designer and developer. From defining brand identities to refining user interfaces. My expertise encompasses branding, logo design, publication design, digital marketing, UI/UX, and development, forging new paths into the digital landscape.">
+
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://naraejang.dev">
+  <meta property="og:title" content="Narae Jang | From defining brand identities to refining user interfaces.">
+  <meta property="og:description"
+    content="Hi! This is Narae, a designer and developer. From defining brand identities to refining user interfaces. My expertise encompasses branding, logo design, publication design, digital marketing, UI/UX, and development, forging new paths into the digital landscape.">
+  <meta property="og:image" content="https://naraejang.dev/website_thumb.webp">
+  <meta property="og:image:alt" content="From defining brand identities to refining user interfaces." />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://leeminjoo.github.io/">
+  <meta property="twitter:title" content="Narae Jang | From defining brand identities to refining user interfaces.">
+  <meta property="twitter:description"
+    content="Hi! This is Narae, a designer and developer. From defining brand identities to refining user interfaces. My expertise encompasses branding, logo design, publication design, digital marketing, UI/UX, and development, forging new paths into the digital landscape.">
+  <meta property="twitter:image" content="https://naraejang.dev/website_thumb.webp">
+  <meta property="twitter:image:alt" content="From defining brand identities to refining user interfaces." />
+
 </head>
 
 <body>
